@@ -493,6 +493,8 @@ if test "x$enable_docs" = "xyes"; then
         docs/tutorial/icons/Makefile
       docs/reference/Makefile
       docs/reference/Doxyfile
+        docs/reference/images/Makefile
+          docs/reference/images/widgets/Makefile
   ])
 else
   DOCS_SUBDIR=""
