@@ -1,0 +1,5 @@
+SUBDIRS = widgets
+
+#This directory is retrieved as an svn::external.
+EXTRA_DIST = stock
+
